Add push, deploy, send_message jobs

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    image: zhuchina/api_yamdb:v1.2022
+    image: zhuchina/api_yamdb
     restart: always
     volumes:
       - static_value:/app/static/
